--- a/layouts/partials/article/article.html
+++ b/layouts/partials/article/article.html
@@ -3,6 +3,8 @@
 
     {{ partial "article/components/content" . }}
 
+    {{ partial "like.html" . }}
+
     {{ partial "article/components/footer" . }}
 
     {{ partial "social-share.html" . }}
