--- a/layouts/partials/article/article.html
+++ b/layouts/partials/article/article.html
@@ -9,6 +9,8 @@
 
     {{ partial "article/components/footer" . }}
 
+    {{ partial "back-to-top.html" . }}
+
     {{ if or .Params.math .Site.Params.article.math }}
     {{ partialCached "article/components/math.html" . }}
     {{ end }}
